Widened the sub-tag-priority show area to prevent overflow.

--- a/app/assets/stylesheets/wrestlers.css
+++ b/app/assets/stylesheets/wrestlers.css
@@ -321,7 +321,7 @@
 }
 
 .sub-tag-priority-show {
-  width: 2em;
+  width: 3em;
   color: #07529b;
 }
 
